--- a/index.html
+++ b/index.html
@@ -1,22 +1,247 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css"
+        integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+    <title>Web Exam</title>
+</head>
 
-    <title>Hello, world!</title>
-  </head>
-  <body>
-    <h1>Hello, world!</h1>
+<body>
+    <!-- NAVBAR -->
+    <div class="container">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#">
+                <img src="images/logo.png" width="40" height="40" class="d-inline-block align-top" alt=""
+                    loading="lazy">
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse ml-auto justify-content-end" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#competences">Competences</a>
+                    <a class="nav-link" href="#loisir">Loisir</a>
+                    <a class="nav-link" href="#contact">Contact</a>
+                </div>
+            </div>
+        </nav>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-  </body>
+
+        <!-- CAROUSEL -->
+
+        <div id="carouselExampleIndicators" class="carousel slide mb-3" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img class="d-block w-100 img-fluid" src="images/enset.jpg" alt="First slide">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>ENSET Mohammedia</h5>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100 img-fluid" src="images/cloud_computing.jpg" alt="Third slide">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Big Data & Cloud Computing</h5>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100 img-fluid" src="images/machine-learning.jpg" alt="Third slide">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Data Science</h5>
+                    </div>
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+
+
+        <!-- PHOTO & DONNEES PERSONNELLES -->
+
+        <div class="row mb-3" id="contact">
+            <div class="col-xs-12 col-md-4 col-lg-4 col-sm-12 col-xl-4 profil-pic">
+                <img src="images/profil_pic.jpg" class="img-fluid" alt="Responsive image">
+            </div>
+            <div class="col-xs-12 col-md-8 col-lg-8 col-sm-12 col-xl-8 contact-infos">
+                <h2>Otmane Boughaba</h3>
+
+                    <div class="row adresse mb-3">
+                        <div class="col">
+                            <i class="fa fa-map-marker-alt mr-2 mt-1"></i>Agadir, Morocco
+                        </div>
+                    </div>
+                    <div class="row mail mb-3">
+                        <div class="col">
+                            <i class="fa fa-envelope mr-2 mt-1"></i> <a href="mailto:otmaneboughaba@gmail.com">otmaneboughaba@gmail.com</a>
+                        </div>
+                    </div>
+                    <div class="row phone mb-3">
+                        <div class="col">
+                            <i class="fa fa-phone mr-2 mt-1"></i>0604530443
+                        </div>
+                    </div>
+                    <div class="row birthday mb-3">
+                        <div class="col">
+                            <i class="fa fa-birthday-cake mr-2 mt-1"></i>08/09/1998
+                        </div>
+                    </div>
+                    <div class="row github mb-3">
+                        <div class="col">
+                            <i class="fab fa-github-alt mr-2 mt-1"></i><a href="https://github.com/Otman404/">github.com/Otman404</a>
+                        </div>
+                    </div>
+            </div>
+        </div>
+
+        <!-- COMPETENCES -->
+        <div class="Cards row mb-3" id="competences">
+            <!-- justify-content-center -->
+            <div class="col-xl-4 col-sm-12 col-xs-12">
+                <div class="card text-center m-1">
+                    <div class="row">
+                        <div class="col-xs-12 col-md-6 col-lg-6 col-sm-12 col-xl-12">
+                            <img class="card-img-top img-fluid" src="images/python_logo.png" alt="Card image cap">
+                        </div>
+                        <div class="col-xs-12 col-md-6 col-lg-6 col-sm-12 col-xl-12">
+                            <div class="card-body">
+                                <h5 class="card-title">Python</h5>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xl-4 col-sm-12 col-xs-12">
+                <div class="card text-center m-1">
+                    <div class="row">
+                        <div class="col-xs-12 col-md-6 col-lg-6 col-sm-12 col-xl-12">
+                            <img class="card-img-top img-fluid" src="images/Scikit_learn_logo.png" alt="Card image cap">
+                        </div>
+                        <div class="col-xs-12 col-md-6 col-lg-6 col-sm-12 col-xl-12">
+                            <div class="card-body">
+                                <h5 class="card-title">Scickit Learn</h5>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xl-4 col-sm-12 col-xs-12">
+                <div class="card text-center m-1">
+                    <div class="row">
+                        <div class="col-xs-12 col-md-6 col-lg-6 col-sm-12 col-xl-12">
+                            <img class="card-img-top img-fluid" src="images/nlp.png" alt="Card image cap">
+                        </div>
+                        <div class="col-xs-12 col-md-6 col-lg-6 col-sm-12 col-xl-12">
+                            <div class="card-body">
+                                <h5 class="card-title">Natural Language Processing</h5>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- VIDEOS -->
+
+        <div class="row mb-3" id="loisir">
+            <div class="col-xs-12 col-md-6 col-lg-6 col-sm-12 col-xl-6">
+                <div class="embed-responsive embed-responsive-16by9">
+                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/HyX6MRs506M"
+                        allowfullscreen></iframe>
+                </div>
+            </div>
+            <div class="col-xs-12 col-md-6 col-lg-6 col-sm-12 col-xl-6">
+                <div class="embed-responsive embed-responsive-16by9">
+                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/FlwDAZ7SSwY"
+                        allowfullscreen></iframe>
+                </div>
+            </div>
+        </div>
+
+        <!-- MAP & FORM -->
+        <div class="row mb-3">
+            <div class="col-xs-12 col-md-6 col-lg-6 col-sm-12 col-xl-6">
+                <div class="embed-responsive embed-responsive-16by9">
+
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d27535.819343741576!2d-9.547530276720822!3d30.37999912698773!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xdb3c8123f0391c7%3A0x9acb9735aba811d8!2sDcheira%20El%20Jihadia%2080000!5e0!3m2!1sen!2sma!4v1599848229943!5m2!1sen!2sma"
+                        width="600" height="300" frameborder="0" style="border:0;" allowfullscreen=""
+                        aria-hidden="false" tabindex="0"></iframe>
+                </div>
+            </div>
+            <div class="col-xs-12 col-md-6 col-lg-6 col-sm-12 col-xl-6">
+                <form>
+                    <div class="form-group row">
+                        <label for="inputEmail3" class="col-sm-2 col-form-label">Email:</label>
+                        <div class="col-sm-10">
+                            <input type="email" class="form-control" id="inputEmail3">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="inputobjet" class="col-sm-2 col-form-label">Objet:</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" id="inputobjet">
+                        </div>
+                    </div>
+                    <div class="form-group now">
+                        <textarea class="form-control" id="FormControlTextarea1" rows="3"></textarea>
+                    </div>
+                    <div class="form-group row justify-content-center">
+                        <div class="col">
+                            <button type="submit" class="btn btn-block btn-primary" id="envoyer">Envoyer</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+
+
+        <!-- FOOTER -->
+        <div class="footer text-center mt-3 p-2 align-middle" style="background-color: #34495e; color: white;">
+
+            <p>Copyright <a href="https://github.com/Otman404">Otmane Boughaba</a> | BDCC1 | ENSET Mohemmadia</p>
+            <p>©2020. All rights reserved.</p>
+            <div class="text-center center-block">
+                <a href="https://github.com/Otman404"><i id="social-fb"
+                        class="fab fa-github-square fa-2x social"></i></a>
+                <a href="https://twitter.com/Otmane404"><i id="social-tw"
+                        class="fab fa-twitter-square fa-2x social"></i></a>
+                <a href="mailto:otmaneboughaba@gmail.com"><i id="social-em"
+                        class="fa fa-envelope-square fa-2x social"></i></a>
+            </div>
+
+        </div>
+        <!-- Optional JavaScript -->
+        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+        </script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+            integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
+        </script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+            integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous">
+        </script>
+</body>
+
 </html>
